Fix compacted column statistics to restrict all stats to valid documents
During commit-time compaction, the old CompactedDictEncodedColumnStatistics
and CompactedRawIndexDictColumnStatistics only partially filtered out deleted
documents, allowing deleted-doc values to skew min/max, element lengths, sort
checks, and total entry counts. This replaces both classes with two new ones:

- CompactedColumnStatistics: for dict-encoded columns; collects only the
  dictionary IDs referenced by valid docs, then derives a compact sorted
  unique-values array, min/max, cardinality, and element lengths from that set.
- CompactedNoDictColumnStatistics: for no-dict columns; performs a single scan
  of valid docs via RoaringBitmap to compute min/max, sorted-order,
  element lengths, and multi-value entry counts.

Also renames MutableNoDictionaryColStatistics to MutableNoDictColumnStatistics
for consistency, and adds comprehensive unit tests for both new classes.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>